--- a/Project/StudentManagement/Views/Shared/_CreateEventLayout.cshtml
+++ b/Project/StudentManagement/Views/Shared/_CreateEventLayout.cshtml
@@ -20,7 +20,7 @@
     <meta content="" name="keywords">
     <!-- Favicons -->
     <link href="~/images/Logo.png" rel="icon">
-    <!--Imoj-->>
+    <!--Imoj-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.css">
     <link href="~/css/site.css" rel="stylesheet" />
