--- a/Project/StudentManagement/Views/Events/Edit.cshtml
+++ b/Project/StudentManagement/Views/Events/Edit.cshtml
@@ -1,8 +1,11 @@
 ﻿@model StudentManagement.Models.Students.EditEvents
-
+@inject SignInManager<User> signInManager
 @{
+    var student = User.IsInRole("Student");
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_CreateEventLayout.cshtml";
+    var users = ViewBag.User as StudentManagement.Entities.User;
+    var avt = users.Avatar;
 }
 
 <div class="page-wrapper bg-blue p-t-100 p-b-100 font-robo">
@@ -11,55 +14,190 @@
             <div class="card-heading"></div>
             <div class="card-body">
                 <form asp-controller="Events" asp-action="Edit" method="post">
-                    <input type="hidden" asp-for="UserId" />
-                    <input type="hidden" asp-for="EventId" />
-                    <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>イベント選択</strong></label>
-                        <div class="col-sm-12">
-                            <select asp-for="ListEventId" class="form-select" asp-items="ViewBag.ListEventId"></select>
+                    @if (student)
+                    {
+                        <input type="hidden" asp-for="UserId" />
+                        <input type="hidden" asp-for="EventId" />
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>イベント選択</strong></label>
+                            <div class="col-sm-12">
+                                <select asp-for="ListEventId" class="form-select" asp-items="ViewBag.ListEventId"></select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>学校生活での出来事</strong></label>
-                        <div class="col-sm-12">
-                            <textarea class="form-control" asp-for="Activities" style="height: 100px;"></textarea>
-                            <span asp-validation-for="Activities" class="text-danger"></span>
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>学校生活での出来事</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="Activities" style="height: 100px;"></textarea>
+                                <span asp-validation-for="Activities" class="text-danger"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>自分の行動</strong></label>
-                        <div class="col-sm-12">
-                            <textarea class="form-control" asp-for="Act" style="height: 100px;"></textarea>
-                            <span asp-validation-for="Act" class="text-danger"></span>
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>自分の行動</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="Act" style="height: 100px;"></textarea>
+                                <span asp-validation-for="Act" class="text-danger"></span>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>発揮した力</strong></label>
-                        <div class="col-sm-12">
-                            <textarea class="form-control" asp-for="PowerExerted" style="height: 100px;"></textarea>
-                            <span asp-validation-for="PowerExerted" class="text-danger"></span>
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>発揮した力</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="PowerExerted" style="height: 100px;"></textarea>
+                                <span asp-validation-for="PowerExerted" class="text-danger"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>伸びた能力</strong></label>
-                        <div class="col-sm-12">
-                            <textarea class="form-control" asp-for="PowerDev" style="height: 100px;"></textarea>
-                            <span asp-validation-for="PowerDev" class="text-danger"></span>
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>伸びた能力</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="PowerDev" style="height: 100px;"></textarea>
+                                <span asp-validation-for="PowerDev" class="text-danger"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>考えたこと</strong></label>
-                        <div class="col-sm-12">
-                            <textarea class="form-control" asp-for="Think" style="height: 100px;"></textarea>
-                            <span asp-validation-for="Think" class="text-danger"></span>
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>考えたこと</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="Think" style="height: 100px;"></textarea>
+                                <span asp-validation-for="Think" class="text-danger"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="p-t-20 row">
-                        <div class="col-lg-12 text-center"><button class="btn btn--radius btn-info center" type="submit">新規</button></div>
-                    </div>
+                        <div class="p-t-20 row">
+                            <div class="col-lg-12 text-center"><button class="btn btn--radius btn-info center" type="submit">新規</button></div>
+                        </div>
+                    }
+                    else
+                    {
+                        <input type="hidden" asp-for="UserId" />
+                        <input type="hidden" asp-for="EventId" />
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>イベント選択</strong></label>
+                            <div class="col-sm-12">
+                                <select asp-for="ListEventId" class="form-select" asp-items="ViewBag.ListEventId" disabled></select>
+                            </div>
+                        </div>
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>学校生活での出来事</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="Activities" style="height: 100px;" disabled></textarea>
+                                <span asp-validation-for="Activities" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>自分の行動</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="Act" style="height: 100px;" disabled></textarea>
+                                <span asp-validation-for="Act" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>発揮した力</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="PowerExerted" style="height: 100px;" disabled></textarea>
+                                <span asp-validation-for="PowerExerted" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>伸びた能力</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="PowerDev" style="height: 100px;" disabled></textarea>
+                                <span asp-validation-for="PowerDev" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-group row mb-3">
+                            <label class="control-label col-sm-2"><strong>考えたこと</strong></label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" asp-for="Think" style="height: 100px;" disabled></textarea>
+                                <span asp-validation-for="Think" class="text-danger"></span>
+                            </div>
+                        </div>
+                    }
+
                 </form>
+            </div>
+        </div>
+        <div class="p-2 msg-card-body">
+            <div class="chat_box">
+                <div class="body" style="overflow: auto;" id="chatbody">
+
+                    @*<div class="incoming">
+                            <br>
+                            <div style="display: flex;  align-items: center;">
+                                <div>
+                                    <div>
+                                        <img class="rounded-circle" style="width: 60px" src="~/images/teacher.png" alt="">
+                                    </div>
+                                    <div>
+                                        <p class="bubble1">giáo viên</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="bubble">
+                                        <strong style="color:black">Tên</strong>
+                                        <p>Hey, Father's Day is coming up..</p><br>
+                                        <span style="font-size: small;" class="msg_time_send">9:10 AM, Today</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>*@
+                </div>
+                <div class="input-group">
+                    <div>
+                        <img class="rounded-circle" style="width: 60px" src="@avt" alt="">
+                    </div>
+                    <textarea name="" id="emojionearea" class="form-control shadow-none m-0" style="border-radius:12px" placeholder=". . .コメント追加"></textarea>
+
+                    <button type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
+                        </svg>
+                    </button>
+
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+            $("#emojionearea").emojioneArea({
+                search: false,
+
+            });
+            LoadProdData();
+        });
+        function getMessager(id) {
+            $.ajax({
+                url: "/Branch/Details/" + id,
+                type: "GET",
+
+                success: function (data) {
+                    $("#select_detail").empty();
+                    $("#select_detail").html(data);
+                }
+            });
+        }
+      function LoadProdData() {
+                $.ajax({
+                    url: '/Messages/Index/' + @Model.EventId,
+                    type: 'GET',
+                    success: function (data) {
+                        $("#chatbody").empty();
+                        $("#chatbody").html(data);
+
+                    },
+                    error: (error) => {
+                        console.log(error)
+                    }
+                })
+            }
+    </script>
+    <style>
+        textarea {
+            resize: none;
+        }
+    </style>
+}
