--- a/Project/StudentManagement/Views/Shared/_AccountLayout.cshtml
+++ b/Project/StudentManagement/Views/Shared/_AccountLayout.cshtml
@@ -36,7 +36,7 @@
     ======================================================== -->
 </head>
 
-<body  style="background: url(https://localhost:44390/images/imagelogin23.jpg)">
+<body style="background: url(https://localhost:44390/images/imagelogin23.jpg)">
 
     <main>
         <div class="container">
@@ -68,7 +68,9 @@
     <script src="~/assets/vendor/chart.js/chart.min.js"></script>
     <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/assets/vendor/echarts/echarts.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+    @RenderSection("Scripts", required: false)
     <!-- Template Main JS File -->
     <script src="~/assets/js/main.js"></script>
 
